--- a/poo-unidad04-ooms/pom.xml
+++ b/poo-unidad04-ooms/pom.xml
@@ -4,6 +4,7 @@
     <groupId>ups.edu.ec.poo.unidad04.ooms</groupId>
     <artifactId>poo-unidad04-ooms</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -77,4 +78,15 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>ups.edu.ec.poo.unidad04.ooms.PooUnidad04Ooms</exec.mainClass>
     </properties>
+    
+    <build>   
+     <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
+        </plugins>
+    </build>
+  
 </project>
